Add system settings for user authentication to GitHub

--- a/core/components/modgithub/docs/changelog.txt
+++ b/core/components/modgithub/docs/changelog.txt
@@ -2,4 +2,5 @@ Changelog for modGitHub
 
 modGitHub 1.0.0
 ===============
+- Add system settings for user authentication to GitHub
 - Initial codebase commit
